2005-03-31  Jose E. Marchesi  <jemarch@dataware.es>

	* src/Ghostview.c (StartInterpreter): Added the '-2x2' argument to
	gs in order to get the correct orientation for landscape
	files. Patch by John Bowman.

	* configure.ac: Enable the scrollbar code. Solves bug #11091.

	* src/main.c (main): use getopt_long_only in order to support old
	command line arguments style.

	* doc/gv.texi (Resource files): Typo fixed
	(Displaying new versions of a document): Reference to VMS removed.
	(How can I make even more room for the image?): Subst -spartan by --spartan

	* configure.ac: The signal handler is now enabled by default,
	following the commentary on configure.ac
	Typo: enable-signal-handle -> enable-signal-handler

	* src/ps.c: Strip off the external reference to 'pdf_delaysafer_hack'
	Revert the delaysafer hack

	* src/misc.c (misc_changeFile): Strip off directories from the
	path of the file. Patch by John Bowman.

2005-01-17  Jose E. Marchesi  <jemarch@dataware.es>

	* src/ps.c: idem.

	* src/main.c: idem.

	* src/resource.c (resource_buildDatabase): Patch from FreeBSD
	ports in order to avoid gcc-dependant code: variable declaration
	only on beginning of blocks.

2004-12-31  Jose E. Marchesi  <jemarch@dataware.es>

	* src/Makefile.am (AM_CFLAGS): Use @X_CFLAGS@ from autoconf

2004-12-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* src/file.c (file_fileIsNotUseful): Use EFTYPE instead of ENODATA
	if the former has been defined.

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS (Notation): Upgraded for 3.6.1

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* README: Upgraded for 3.6.1

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change reference source file on AC_INIT

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* src/gv_message.h (displayed\n\): Fixed a typo on the help message.

	* src/gv_misc_res.dat: Changed the Reopen label to Reload for the
	File menu.

	* src/Makefile.am ($(srcdir)/gv_intern_res_unix.dat): Fix