@@ -189,8 +189,8 @@ $(srcdir)/gv_intern_res_unix.dat :
 	@echo "!########## gv_intern_res.dat (generated by makefile)" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo ""							>> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.gsInterpreter:	gs" >> $(srcdir)/gv_intern_res_unix.dat
-	@echo "GV.gsCmdScanPDF:	gs -dNODISPLAY -dQUIET -sPDFname='%s' -sDSCname='%s' pdf2dsc.ps -c quit" >> $(srcdir)/gv_intern_res_unix.dat
-	@echo "GV.gsCmdConvPDF:	gs -dNOPAUSE -dQUIET -dBATCH -sDEVICE=pswrite -sOutputFile='%s' -f '%s' -c save pop quit" >> $(srcdir)/gv_intern_res_unix.dat
+	@echo "GV.gsCmdScanPDF:	gs -dNODISPLAY -dQUIET -sPDFname=%s -sDSCname=%s pdf2dsc.ps -c quit" >> $(srcdir)/gv_intern_res_unix.dat
+	@echo "GV.gsCmdConvPDF:	gs -dNOPAUSE -dQUIET -dBATCH -sDEVICE=pswrite -sOutputFile=%s -f %s -c save pop quit" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.gsX11Device:		-sDEVICE=x11" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.gsX11AlphaDevice:	-sDEVICE=x11 -dTextAlphaBits=4 -dGraphicsAlphaBits=2 -dMaxBitmap=10000000 -dNOPLATFONTS" >> $(srcdir)/gv_intern_res_unix.dat
 	@echo "GV.gsSafer:		True" >> $(srcdir)/gv_intern_res_unix.dat
